<resources>
    <string name="app_name">PMA101- Recipe Sharing Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="profile_icon">Profile Icon</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>

</resources>