<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/profile_icon"
                android:layout_marginBottom="24dp" />




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_user"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_user"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:padding="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember me"
                    android:buttonTint="@color/white_000"

                    android:textColor="#FFFFFF"/>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Forgot Password?"
                    android:gravity="center|right"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="end"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Register"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"

                android:onClick="onLoginClick"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
