<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="72dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/profile_icon"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white_000"
                android:fontFamily="@font/be_vietnam_pro_light"
                android:textColorHint="@color/white_000"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/white_000"
                android:drawablePadding="12dp"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:endIconTint="@color/white_000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textSize="15sp"
                android:fontFamily="@font/be_vietnam_pro_light"
                android:textColorHint="@color/white_000"
                android:textColor="@color/white_000"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:drawableTint="@color/white_000"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:buttonTint="@color/white_000"
                android:fontFamily="@font/be_vietnam_pro_extralight"
                android:textColor="#FFFFFF"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Forgot Password?"
                android:fontFamily="@font/be_vietnam_pro_extralight"
                android:gravity="center|right"
                android:textColor="#FFFFFF"
                android:layout_gravity="end"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="72dp"
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAllCaps="false"
            android:fontFamily="@font/be_vietnam_pro_bold"
            android:background="@drawable/cus_bgr_rounded_corner_10"
            android:backgroundTint="@color/red_E3E"
            android:textColor="@color/white_000"
            android:padding="12dp"/>
        <LinearLayout
            android:id="@+id/btn_goToSignUp"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="@font/be_vietnam_pro_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? "
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:fontFamily="@font/be_vietnam_pro_bold"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
